css/responsive.css
 
@media (min-width: 992px) {
	.navbar nav {
		list-style: none;
		width: 100%;
		flex-wrap: wrap;
	}
	.navbar .collapse {
		display: block;
	}
	.navbar nav li {
		display: inline-block;
	}
	.navbar nav li.readtotoal {
		float: right;
	}
	.toturial .navbar-collapse {
		display: block !important;
	}
	.col-2-5 { 
		max-width: 20%;
		flex: 0 0 0 20%;
		padding: 0 5px;
		position: relative;
		width: 100%;
	}
	
	.menu-home ul li ul ,
	.menu ul li ul {
		display: none;
		position: absolute;
		left: 100%;
		top: 0;
		z-index: 100;
		min-width: 100%;
		min-height: 100%;
		background: #FCFCFC;
	}
	.menu-home ul li:hover > ul ,
	.menu ul li:hover > ul {
		display: block;
	}
	.menu-home .card-body ,
	.menu .card-body {
		position: relative;
		background: #FCFCFC;
	}
	li.has-child > a {
		position: relative;
	}
	li.has-child > a:after {
		content: "";
		position: absolute;
		top: calc(50% - 8px);
		right: 5px;
		height: 16px;
		width: 10px;
		background: url(../images/narrow.png) no-repeat 0 0 transparent;
	}
	.menu .card-body {
		display: none;
		position: absolute;
		min-width: 250px;
		width: 100%;
	}
	
	.modal-dialog {
		max-width: 900px;
		margin: 0 auto;
	}
	.menu-news-bottom .nav-item {
		display: inline-block;
	}
	.menu-news-bottom .news-more .nav-item {
		display: block;
	}
	
	.card .image {
		height: 210px;
	}
	.personal-info .card .image { 
		height: 151px;
	}
	.products-container .swiper-slide { 
		max-width: calc(20% - 8px);
		margin-right: 10px;
		position: relative;
		width: 100%;
	}
	.products-container-layout1 .swiper-slide { 
		max-width: calc(20% - 8px);
		margin-right: 10px;
		position: relative;
		width: 100%;
	}
	.news-container .swiper-slide {
		max-width: calc(25% - 8px);
		margin-right: 10px;
		position: relative;
		width: 100%;
	}
	.menu-news-bottom.collapse {
		display: block;
	}
	.gallery-thumbs .swiper-slide {
		max-width: 140px;
		overflow: hidden;
	}

}
@media (max-width: 1200px) {
	.card .image {
		height: 175px;
	}
	.send-mail-form input.form-control {
		width: 250px;
	}
	
	.personal-info .card .image { 
		height: 130px;
	} 
	.menu-home .card-header img, .menu .card-header img {
		width: 15px;
	}
	.menu-home .card-header img, .menu .card-header h4 {
		font-size: 16px;
	}
	span.career-hover, span.address-hover {
		font-size: .6rem;
	}
	span.address-hover {
		background-position: 0;
	}
	.news-right {
		display: flex;
		flex-wrap: wrap;
	}
	.news-center {
		border-right: 0 !important;
	}
	.news-right > .news:nth-child(2n) {
		padding-left: .5rem !important;
		border-bottom: 0 !important;
	}
	.news-right > .news:nth-child(2n + 1) {
		padding-right: .5rem !important;
		border-bottom: 0 !important;
	}
	.relate-post p {
		font-size: 13px;
		line-height: 14px;
	}
}
@media (min-width: 1200px) {
	.news-right > div {
		min-height: 24%;
		vertical-align: middle;
		align-items: center;
		display: flex;
	}

}
@media (min-width: 1024px) {
	.gallery-thumbs .swiper-slide {
		max-width: 170px;
		overflow: hidden;
	}
	
}
@media (max-width: 1024px) {
	.personal-info .card .image { 
		height: 156px;
	} 
	.relate-post h5 {
		margin-bottom: 0 !important;
	} 
}
@media (max-width: 991px) {
	.relate-post > div:first-child {
		float: left;
		padding-bottom: 5px;
		padding-left: 0;
	}
	.relate-post {
		display: block;
		padding: 0 .5rem;
		clear: both;
		text-align: justify;
	}
	.relate-post span.time {
		float: right;
	}
	.relate-post > div:nth-child(2) {
		display: inline;
	}
	.relate-post > div:nth-child(2) h4 {
		text-align: left;
	}
	.navbar nav li {
		display: block;
	} 
	.nav-link {
		padding: .5rem .5rem;	
			
	}
	span.noti-count {
		right: 3px;
	}
	
	.nav-link {
		display: block;
	}
	.article-header h3.title {
		float: left;
		margin-top: 7px;
	}
	.article-header button.navbar-toggler {
		float: right;
		color: #fff;
	}
	.menu-container .navbar-toggler {
		float: right;
	}
	.category-menu,
	.category-menu.sm-menu {
		min-height: 0;
		padding: 0;
	}
	.category-title {
		overflow: hidden;
		vertical-align: middle;
		padding: 5px !important;
		margin-bottom: -1px;
	}
	.navbar nav .nav-item{
		margin: 0 !important;
	}
	.navbar nav .nav-item a {
		padding: 7px 10px;
		margin: 0;
	}
	.send-mail-form input.form-control {
		width: 160px;
		margin-left: 0;
	}
	.toturial-title {
		padding: 2px 5px;
		background: #FFF5D7;
	}
	.toturial .navbar-collapse {
		align-items: start; 
	} 
	.toturial .navbar-collapse li a {
		padding: 7px 10px;
		margin: 0;
		border-bottom: 1px solid #ddd;
		display: block;
	}
	.navbar-toggler-icon:after {
		content: 'prev';
		font-family: swiper-icons;
		line-height: 1.9rem;
	}
	.navbar-toggler-icon {
		transform: rotate(-90deg);
		text-align: center;
		transition-duration: 200ms;
	}
	button.navbar-toggler:focus {
		outline: 0;
	}
	.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
		transform: rotate(90deg);
	}
	 
	.navigation {
		position: fixed;
		bottom: 0;
		width: 100%;
		box-shadow: 0px 0px 5px 3px #dfdfdf;
		z-index: 100;

	}
	.navigation a {
		width: calc(100% / 4);
		padding: 5px 0;
		position: relative;
	}
	.footer {
		padding-bottom: 80px !important;
	}
	.menu-item span {
		display: block;
		margin-top: 5px;
	}
	.menu-item span.count {
		position: absolute;
		top: 0;
		left: 50%;
		color: #fff;
		background: #FF6442;
		padding: 0 5px;
		border-radius: 10px;
		font-size: 9px;
	}
	.memu-noti li { 
		margin: 0 5px;
	}
	.card .image {
		height: 160px;
	}
	.personal-info .card .image { 
		height: 125px;
	}
	.nav_menu_toggler_icon{
		display:block;
	}
	.menu-container{
		background: skyblue;
	}
	.menu-container .manu{
		display: none;
	}
	.menu-container .manu ul li{
		float: none;
		display: block;
	}
	.menu-container .manu ul li .have_dropdown{
		background-color:transparent;
		display: none;
		position: relative;
	}
	.menu-container .manu ul li .have_dropdown li{
		display: block;
		float: none;
		width: 100%;
		background-color: #fff;
	}
	.menu-container .manu ul li .have_dropdown li a{
		display: block;
		float: none;
		width: 100%;
		padding: 15px 0px;
	}
	.menu-container .manu ul li .have_dropdown_n_style li{
		width:100%;
		float: none;
	}
	.menu-container .manu ul li .have_dropdown_n_style li a{
		float: none;
	}
	.menu-container .manu ul li .have_dropdown_n_style{
		position: relative;
	}
	.have_dropdown a.nav-link:before {
		display: none;
	}
	.relate-post p {
		font-size: 13px;
	}
	.menu-news-bottom .nav-item {
		width: 100%;
		padding: 5px;
		border-top: 1px solid #ddd;
	}
	.menu-news-bottom {
		padding: 0 !important;
	}
	.menu-news li.nav-item {
		padding: 10px 0;
	}
	.relate-post > div:nth-child(2) p {
		line-height: 14px;
	}
	label.custom-file-container__custom-file {
		width: calc(50% - 1rem);
    	padding-bottom: calc(50% - 1rem);
	}
	.custom-file-container__image-multi-preview {
		width: calc(50% - 1rem);
    	padding-bottom: calc(50% - 1rem);
	}
} 

@media (max-width: 768px) {
	.gallery-thumbs .swiper-slide {
		max-width: 180px;
		overflow: hidden;
	}
	.memu-noti li {
		margin: 0 5px;
	}
	.send-mail-form input.form-control {
		width: 150px;
	}
	span.model-name {
		min-width: auto;
		float: left;
	}
	span.model {
		float: right;
	}
	span.model-name:after {
		display: none;
	}
	.personal-info .card .image {
		height: 140px;
	}
	span.model-name {
		display: inline;
	}
	span.model:before {
		content: "-";
		margin-right: 3px;
	}
	.news-center {
		display: flex;
		flex-wrap: wrap;
	}
	.news-left {
		border: 0 !important;
	}
	.news-center > .news:nth-child(2n + 1) {
		padding-right: .5rem !important;
		border-bottom: 0 !important;
	}
	.news-center > .news:nth-child(2n) {
		padding-left: .5rem !important;
	}
	
}
@media (max-width: 640px) {
	.card .image {
		height: 175px;
	}
	.ads-slider .swiper-slide {
		max-width: 50%;
	}
}
@media (max-width: 576px) {
	.news-right > .news:nth-child(n) {
		padding-left: 0 !important; 
		padding-right: 0 !important; 
	}
	.news-center > .news:nth-child(n) {
		padding-left: 0 !important; 
		padding-right: 0 !important; 
	}
	section.content {
		padding-top: 110px !important;
	} 
	.pagination {
		justify-content: center;
		padding-top: 10px;
	}
	.action-noti {
		display: block;
		text-align: right;
		margin: 0;
	}
	.memu-noti li { 
		margin: 0;
	}
	
	.memu-noti li a {
		padding: 0 4px;
	}
	.send-mail-form input.form-control {
		width: 150px;
	}
	span.model {
		float: none;
	}
	span.model-name {
		float: none;
	}
	.personal-info .card .image {
		height: 130px;
	}
	.profile p.card-text {
		font-size: 12px;
		margin-top: 0 !important;
	}
	span.career-hover,
	span.address-hover {
		font-size: 0.55rem;
	}
	span.address-hover {
		background-position: 0;
	}
	span.career-hover {
		padding-bottom: 0;
		margin-bottom: 2px;
	}
	.relate-post h4 {
		text-align: left;
		font-size: 1rem;
	}
	.gallery-thumbs .swiper-slide {
		max-width: 130px;
		overflow: hidden;
	}
}
@media (max-width: 413px) {
	.relate-post > div:first-child {
		padding-right: 0 !important;
		width: 100% !important;
		max-width: 100% !important;
	}
	.video-list .col-6 {
		max-width: 100% !important;
		flex: 100% !important;
	}
	.memu-noti li a {
		font-size: 0.75rem;
		padding: 1px ;
	}
	.nav-tabs { 
		font-size: 11px;
	}
	.nav-tabs .nav-link {
		padding: 0.5rem 1rem;
	}
	
	.com-details .com-detail {
		font-size: 0.65rem;
	}
	
	
	.category-panel .col-6 {
		flex: 100% !important;
		max-width: 100% ;
	}
	.person-info .image, 
	.person-info .card-body{
		max-width: 100%;
		text-align: center;
	}
	.person-info {
		display: block !important;
	}
	.person-info tr td:first-child {
		text-align: left;
	}
	.person-info tr td:last-child {
		text-align: right;
	}
	.person-info table {
		width: 100%;
	}
	.person-info .image img {
		width: auto;
	}
}

